--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">SamHangSiTime</string>
+    <string name="all_ok">확인</string>
+    <string name="all_cancel">취소</string>
+    <string name="all_err">오류가 발생했습니다. 다시 시도해주세요!</string>
+
+    <string name="login_input_name">닉네임을 입력해주세요.</string>
+    <string name="login_already_used">이미 사용중인 닉네임입니다.</string>
+    <string name="login_success">로그인 성공! 환영합니다.</string>
+    <string name="title_name">로그인</string>
 </resources>
