--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SamHangSiTime</string>
+    <string name="app_name">삼행시</string>
     <string name="all_ok">확인</string>
     <string name="all_cancel">취소</string>
     <string name="all_err">오류가 발생했습니다. 다시 시도해주세요!</string>
