Kotlin project로 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,5 @@
     <string name="main_my_poem">내 삼행시</string>
     <string name="main_start">시작하자</string>
 
-    <string name="game_submit">제출하기</string>
+    <string name="game_submit">제출하자</string>
 </resources>
