삼행시 정렬 버튼 터치 이벤트 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="main_favorite">인기순</string>
     <string name="main_my_poem">내 삼행시</string>
     <string name="main_start">시작하자</string>
+    <string name="main_no_item">아직 삼행시가 존재하지 않습니다!</string>
 
     <string name="game_submit">제출하자</string>
 </resources>
