타이머 및 삼행시 제출 기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="login_finish">입장하기 →</string>
     <string name="login_input_name">닉네임을 입력해주세요.</string>
-    <string name="login_already_used">이미 사용중인 닉네임입니다.</string>
+    <string name="login_already_used">이미 사용중인 닉네임입니다!</string>
     <string name="login_success">로그인 성공! 환영합니다.</string>
     <string name="title_name">로그인</string>
 
@@ -15,7 +15,7 @@
     <string name="main_favorite">인기순</string>
     <string name="main_my_poem">내 삼행시</string>
     <string name="main_start">시작하자</string>
-    <string name="main_no_item">아직 삼행시가 존재하지 않습니다!</string>
+    <string name="main_no_item">아직 삼행시가 없습니다!</string>
 
     <string name="game_submit">제출하자</string>
     <string name="game_ready1">준</string>
