--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="all_cancel">취소</string>
     <string name="all_err">오류가 발생했습니다. 다시 시도해주세요!</string>
     <string name="all_user">님</string>
+    <string name="all_exit">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다.</string>
 
     <string name="login_finish">입장하기 →</string>
     <string name="login_input_name">닉네임을 입력해주세요.</string>
@@ -23,4 +24,5 @@
     <string name="game_ready3">중</string>
     <string name="game_input">입력!</string>
     <string name="game_not_input">비어있는 행이 있어요!</string>
+    <string name="game_finish">삼행시 제출 완료!</string>
 </resources>
