--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="game_input">입력!</string>
     <string name="game_not_input">비어있는 행이 있어요!</string>
     <string name="game_finish">삼행시 제출 완료!</string>
+    <string name="game_back">아직 삼행시 작성이 진행 중이예요. 종료하시겠어요?</string>
 </resources>
