--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="all_ok">확인</string>
     <string name="all_cancel">취소</string>
     <string name="all_err">오류가 발생했습니다. 다시 시도해주세요!</string>
+    <string name="all_rank_err">순위 조회 중 오류가 발생했습니다. 다시 시도해주세요!</string>
     <string name="all_user">님</string>
     <string name="all_exit">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다.</string>
 
